2009-08-01  John Abd-El-Malek  <jam@chromium.org>

Reviewed by Adam Barth.

        Fix a message port handle always getting marked as reachable once it gets entangled.

        https://bugs.webkit.org/show_bug.cgi?id=27824

        No tests since this only arises with the Chromium multi-process message port implementation
        which isn't in this repostiory.

        * bindings/v8/V8GCController.cpp:
        (WebCore::GCEpilogueVisitor::visitDOMWrapper):

Canonical link: https://commits.webkit.org/38272@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@46666 268f45cc-cd09-0410-ab3c-d52691b4dbfc